# TallerDeProgramacionI_TP_MicroMachines

./: .gitignore  .gitmodules  CMakeLists.txt  Cosas Que Faltan 2  Cosas que faltan 3.txt  Cosas que faltan%3a  Cosas que faltan:  Dudas 4.txt  Dudas.txt  Dudas2.txt  Dudas3.txt  README.md  comoHacerErrores.cpp  e  main.cpp  requisitos.txt
Bibliotecas/: BibliotecaDinamica.cpp  BibliotecaDinamica.h  CMakeLists.txt  Carro.cpp  Carro.h  CosasUtiles.txt  ErrorBiblioteca.cpp  ErrorBiblioteca.h  ErrorLibreria.cpp  ErrorLibreria.h  Ideas de mods.txt  LibreriaDinamica.cpp  LibreriaDinamica.h  ModAuto.cpp  ModAuto.h  Plugin.cpp  Plugin.h  deprecated.txt  main.cpp
Bibliotecas/BibliotecaDinamica/: CMakeLists.txt  PruebaMod.cpp  PruebaMod.h
Bibliotecas/BibliotecaDinamica1/: PruebaMod.cpp
Bibliotecas/BibliotecaDinamica2/: CMakeLists.txt  ModBoost.cpp
Bibliotecas/BibliotecaEstatica/: CMakeLists.txt  utilidades.cpp  utilidades.h
Bibliotecas/ModBoost/: CMakeLists.txt  ModBoost.cpp  ModBoost.h
Client/: .gitignore  CMakeCache.txt  CMakeLists.txt  HiloMenu.cpp  HiloMenu.h  LectorTeclado.cpp  Makefile  Servidor.cpp  Servidor.h  Textura.cpp  Textura.h  Ventana.cpp  Ventana.h  client.cbp  cmake_install.cmake  comentarios.txt  main.cpp  sdl.supp  ui_inicio.h  ui_lobby.h
Client/Comandos/: AdministradorComandos.cpp  AdministradorComandos.h  Comando.h  ComandoAcelerar.cpp  ComandoAcelerar.h  ComandoCerrar.cpp  ComandoCerrar.h  ComandoDerecha.cpp  ComandoDerecha.h  ComandoFrenar.cpp  ComandoFrenar.h  ComandoIniciarPartida.cpp  ComandoIniciarPartida.h  ComandoIzquierda.cpp  ComandoIzquierda.h
Client/Excepciones/: ExcepcionConPos.h
Client/Juego/: Auto.cpp  Auto.h  Juego.cpp  Juego.h  Partida.cpp  Partida.h  Pista.cpp  Pista.h
Client/Lector/: HiloLector.cpp  HiloLector.h  Jugador.cpp  Jugador.h  LectorTeclado.cpp  LectorTeclado.h
Client/Menu/: Inicio.cpp  Inicio.h  Lobby.cpp  Lobby.h
Client/Sdl/: Posicion.cpp  Posicion.h  Renderizador.cpp  Renderizador.h  Textura.cpp  Textura.h  VectorDeTexturas.cpp  VectorDeTexturas.h  Ventana.h
Client/Sockets/: Protocolo.cpp  Protocolo.h  ServidorProxy.cpp  ServidorProxy.h  SocketActivo.cpp  SocketAmigo.cpp  SocketException.cpp  SocketException.h  SocketPeerException.cpp  Utilidades.cpp
Client/Vista/: Camara.cpp  Camara.h  ContenedorDeTexturas.cpp  ContenedorDeTexturas.h  HiloReceptor.cpp  HiloReceptor.h  HiloVisualizacion.cpp  HiloVisualizacion.h
Lua/: CMakeLists.txt  ErrorLua.cpp  ErrorLua.h  InterpreteLua.cpp  InterpreteLua.h  JugadorCPU.cpp  JugadorCPU.h  LuaTest  claseLua.cpp  main.cpp  prueba.lua  script.lua
Lua/ParametrosLua/: CadenaLua.cpp  CadenaLua.h  EnteroLua.cpp  EnteroLua.h  FlotanteLua.cpp  FlotanteLua.h  ParametroLua.cpp  ParametroLua.h
Lua/ScriptsLua/: script.lua  script2.lua
Protocolo/: CMakeLists.txt  ClienteProxy.cpp  ClienteProxy.h  Cosas.txt  Partida.cpp  Partida.h  Protocolo.cpp  Protocolo.h  ServidorProxy.cpp  ServidorProxy.h  main.cpp
Protocolo/Comandos/: AgregarMovimiento.cpp  AgregarMovimiento.h  Comando.h  EnviarMapa.cpp  EnviarMapa.h  EnviarPosiciones.cpp  EnviarPosiciones.h
Protocolo/Hilos/: Hilo.h  HiloCliente.cpp  HiloCliente.h  HiloServidor.cpp  HiloServidor.h
Protocolo/Socket/: SocketActivo.cpp  SocketActivo.h  SocketPasivo.cpp  SocketPasivo.h
Servidor/: Accion.cpp  Accion.h  Aceite.cpp  Aceite.h  Acelerar.cpp  Acelerar.h  Asfalto.cpp  Asfalto.h  Barro.cpp  Barro.h  Boost.cpp  Boost.h  CMakeCache.txt  CMakeLists.txt  CajaDeSalud.cpp  CajaDeSalud.h  Carro.cpp  Carro.h  Carros.txt  ClienteProxy.cpp  ClienteProxy.h  ConfiguracionServidor.cpp  ConfiguracionServidor.h  Cuadrado.cpp  Cuadrado.h  Curva.cpp  Curva.h  ErrorConfiguracion.cpp  ErrorConfiguracion.h  EstadoVelocidad.cpp  EstadoVelocidad.h  EstrategiaDeVelocidad.cpp  EstrategiaDeVelocidad.h  Figura.h  Frenar.cpp  Frenar.h  GiroADerecha.cpp  GiroADerecha.h  GiroAIzquierda.cpp  GiroAIzquierda.h  (+54 more)
Servidor/Acciones/: Accion.cpp  Accion.h  Acelerar.cpp  Acelerar.h  Frenar.cpp  Frenar.h  GiroADerecha.cpp  GiroADerecha.h  GiroAIzquierda.cpp  GiroAIzquierda.h
Servidor/Carro/: Agarre.cpp  Agarre.h  Carro.cpp  Carro.h  Velocidad.h  VelocidadBase.cpp  VelocidadBase.h  Vida.h  Visibilidad.cpp
Servidor/Comandos/: AgregarMovimiento.cpp  AgregarMovimiento.h  Comando.cpp  EnviarMapa.cpp  EnviarPosiciones.cpp
Servidor/Comunicacion/: ClienteCerradoExcepcion.cpp  ClienteCerradoExcepcion.h  ClienteProxy.cpp  ClienteProxy.h  ColaBloqueante.cpp  ColaBloqueante.h  EnJuego.cpp  EnJuego.h  EnMenu.cpp  EnMenu.h  Estado.cpp  Estado.h  HiloCliente.cpp  HiloCliente.h  HiloEnviador.cpp  HiloEnviador.h  HiloPartida.cpp  HiloPartida.h  Protocolo.cpp  Protocolo.h  Utilidades.cpp
Servidor/Comunicacion/Comandos/: Comando.h  CrearPartida.cpp  CrearPartida.h  ElegirPartida.cpp  ElegirPartida.h  EnviarMapa.cpp  EnviarMapa.h  ObtenerPartidas.h  (+6 more)
Servidor/Modificadores/: Aceite.cpp  Barro.cpp  Barro.h  Boost.cpp  CajaDeSalud.cpp  CajaDeSalud.h  Modificador.cpp  Modificador.h  Piedra.cpp  Piedra.h
Servidor/Mods/: BibliotecaDinamica.cpp  BibliotecaDinamica.h  ErrorBiblioteca.cpp  ErrorBiblioteca.h  Mod.cpp  Mod.h  ModAuto.cpp  ModAuto.h
Servidor/Objetos/: Interactuable.h  Objeto.cpp  Objeto.h
Servidor/Partida/: HashProtegido.cpp  HashProtegido.h  HashProtegidoClientes.cpp  HashProtegidoClientes.h  ManejadorDeContactos.cpp  ManejadorDeContactos.h  Mapa.cpp  Mapa.h  MundoBox2D.cpp  MundoBox2D.h  Partida.cpp  Partida.h  Pista.cpp  Pista.h  Podio.cpp  Podio.h
Servidor/Planos/: PlanoDeCarro.cpp  PlanoDeCarro.h  PlanoDeCurva.cpp  PlanoDeCurva.h  PlanoDePista.cpp  PlanoDePista.h  PlanoDeRecta.cpp  PlanoDeRecta.h  PlanoDeSuelo.cpp  PlanoDeSuelo.h
Servidor/Suelos/: Asfalto.cpp  Curva.cpp  Curva.h  Material.cpp  Material.h  Pasto.cpp  Pasto.h  Recta.cpp  Recta.h  Suelo.h
Servidor/yaml-cpp/: YAML_CPP.cbp
ffmpeg/: BufferBloqueante.cpp  BufferBloqueante.h  CMakeLists.txt  Codec.cpp  Codec.h  ErrorFfmpeg.cpp  Escalador.cpp  Escalador.h  Frame.cpp  Frame.h  GrabadorVideo.cpp  GrabadorVideo.h  HiloGrabador.cpp  HiloGrabador.h  VideoSalida.cpp  VideoSalida.h  clase_ffmpeg.txt  main.cpp
(+281 files in other folders)
